# image-build-automation

./: .coverage  .env  .gitignore  .gitlab-ci-full.yml  .gitlab-ci.yml  .kiloignore  CONSOLIDATION_SUMMARY.md  Dockerfile  HPE_OpenView_Commands.md  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  Makefile  PSScriptAnalyzerSettings.psd1  QUICKSTART.txt  README.md  TODO.md  connect-marin.ps1  coverage-report.txt  coverage-results.xml  coverage.xml  docker-compose.yml  docker-entrypoint.ps1  justfile  maintenance_distribution_list.txt  pyproject.toml  requirements.txt  requirements_summary.md  test-results.xml
configs/: README.md  clusters_catalogue.examples-only.json  clusters_catalogue.json  clusters_catalogue.scom.json  configmgr_config.json  connection_hosts.json  email_distribution_lists.examples-only.json  oneview_config.examples-only.json  oneview_config.json  oneview_config.working.json  openview_config.json  request_types.json  scom_config.json  scom_config.working.json  server_list.txt  servers_catalogue.oneview.json
docs/: BitBucket_Code_Map_Automations.md  BitBucket_Code_Map_Maitenance_Mode copy.md  BitBucket_Code_Map_Maitenance_Mode.md  CHECKMAKE_INTEGRATION.md  CLIENT-QUICK-START.md  Code_Map_Automations.md  Code_Map_Maitenance_Mode.md  GITLAB_INTEGRATION.md  GitHub_Code_Map_Automations.md  GitHub_Code_Map_Maitenance_Mode.md  HELP_SYSTEM.md  MAINTENANCE_MODE_CODE_MAP.md  MAINTENANCE_MODE_SHORTCUTS.md  MAINTENANCE_MODE_TESTING.md  QUICK_REFERENCE.md  README.md  SET-MAINTENANCEMODE-HELP.md  SETUP-GUIDE.md  TESTING_POWERSHELL_QUICKSTART.md  TESTING_QUICK_START.md  TEST_IMPLEMENTATION_COMPLETE.md  api_reference.md  audit_process.md  auth-doc.md  automation_commands.md  bitbucket-md-toc.ps1  code_quality.md  devops-guide-to-HPe-Terms.md  gdpr_compliance.md  gitlab.md  maint-mode-initial-testing.md  maintenance-mode-environment-config.md  maintenance-mode-quick-reference.md  maintenance_mode.md  oneview-auth.md  oneview-module-versions.md  powershell-profile-setup.md  powershell_api_reference.md  powershell_ci.md  powershell_testing.md  (+4 more)
jenkins/: Jenkinsfile  Jenkinsfile.python
output/: build_summary_1778803507.json  build_summary_1778803578.json  build_summary_1778962026.json  build_summary_1778963019.json  build_summary_1778963768.json  build_summary_1778963795.json  build_summary_1778963819.json  build_summary_1778963861.json  build_summary_1778970891.json  build_summary_1778971173.json  build_summary_1778971335.json  build_summary_1778971378.json  build_summary_1779381966.json  (+1 more)
(+662 files in other folders)
